--- a/MERN-Auth-main/MERN-Auth-main/backend/.env
+++ b/MERN-Auth-main/MERN-Auth-main/backend/.env
@@ -1,1 +1,4 @@
 
+PORT=8080
+MONGO_CONN=mongodb+srv://meaayushgupta:Aayushmongodb@cluster1.pvuyciq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+JWT_SECRET="secret-123"
